test/e2e/testdata/.snapshots/TestSetupFailureFlow/Invalid_Public_Key/GET_api_private_ipinfo_1.snaphost
HTTP/2.0 401 Unauthorized
Content-Length: 106
Content-Type: application/json
Date: Wed, 11 Feb 2026 09:06:51 GMT
Server: mdbws
Www-Authenticate: Digest realm="MMS Public API", domain="", nonce="sxr+pjt3xeSoYEJ0DfIx4LYqTyf7BY/P", algorithm=MD5, qop="auth", stale=false

{
  "error" : 401,
  "reason" : "Unauthorized",
  "detail" : "You are not authorized for this resource."
}